--- a/app/src/main/res/layout/cook_write_timer.xml
+++ b/app/src/main/res/layout/cook_write_timer.xml
@@ -6,103 +6,157 @@
     android:id="@+id/write_timer"
     android:layout_margin="10dp"
     android:background="@drawable/bg_search_bar_orange_border">
+
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:layout_weight="1">
-
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             android:layout_weight="1"
             android:text="시간"
             android:gravity="bottom|center"
             android:textColor="@color/black"
             android:textSize="20sp"/>
-
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center_horizontal"
             android:orientation="horizontal">
-
             <ImageView
+                android:id="@+id/hour_p"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:layout_gravity="top"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
                 android:src="@drawable/ic_add"/>
-
-            <EditText
+            <TextView
+                android:id="@+id/hour_num"
                 android:layout_width="wrap_content"
                 android:layout_height="28dp"
                 android:gravity="top"
                 android:layout_gravity="top"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
                 android:text="0"
                 android:textSize="24sp"
                 android:background="@android:color/transparent"/>
-
             <ImageView
+                android:id="@+id/hour_m"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:layout_gravity="top"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
                 android:src="@drawable/ic_remove"/>
         </LinearLayout>
     </LinearLayout>
+    <!-- 분 설정 -->
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:layout_weight="1">
-
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             android:layout_weight="1"
-            android:text="시간"
+            android:text="분"
             android:gravity="bottom|center"
             android:textColor="@color/black"
             android:textSize="20sp"/>
-
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal">
+            <ImageView
+                android:id="@+id/minute_p"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_gravity="top"
+                android:layout_marginTop="5dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
+                android:src="@drawable/ic_add"/>
+            <TextView
+                android:id="@+id/minute_num"
+                android:layout_width="wrap_content"
+                android:layout_height="28dp"
+                android:gravity="top"
+                android:layout_gravity="top"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
+                android:text="0"
+                android:textSize="24sp"
+                android:background="@android:color/transparent"/>
+            <ImageView
+                android:id="@+id/minute_m"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_gravity="top"
+                android:layout_marginTop="5dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
+                android:src="@drawable/ic_remove"/>
+        </LinearLayout>
+    </LinearLayout>
+    <!-- 초 설정  -->
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_weight="1">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:text="초"
+            android:gravity="bottom|center"
+            android:textColor="@color/black"
+            android:textSize="20sp"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center_horizontal"
             android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/second_p"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:layout_gravity="top"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
                 android:src="@drawable/ic_add"/>
-
-            <EditText
+            <TextView
+                android:id="@+id/second_num"
                 android:layout_width="wrap_content"
                 android:layout_height="28dp"
                 android:gravity="top"
                 android:layout_gravity="top"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
                 android:text="0"
                 android:textSize="24sp"
                 android:background="@android:color/transparent"/>
-
             <ImageView
+                android:id="@+id/second_m"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:layout_gravity="top"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
                 android:src="@drawable/ic_remove"/>
         </LinearLayout>
     </LinearLayout>
