--- a/app/src/main/res/layout/read_recipe_step.xml
+++ b/app/src/main/res/layout/read_recipe_step.xml
@@ -6,81 +6,99 @@
     android:layout_height="match_parent"
     app:cardBackgroundColor="@android:color/white">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center_horizontal"
-        android:paddingBottom="10dp"
+        android:paddingLeft="10dp"
         android:paddingRight="10dp"
-        android:paddingLeft="10dp">
+        android:paddingBottom="10dp">
 
-        <ImageView
-            android:id="@+id/iv_step_image"
-            android:layout_width="match_parent"
-            android:layout_height="250dp"
-            android:scaleType="centerCrop"
-            android:background="@drawable/bg_gray_rounded"
-            android:clipToOutline="true"
-            android:visibility="gone"
-            tools:srcCompat="@tools:sample/backgrounds/scenic"
-            tools:visibility="visible"
-            android:contentDescription="레시피 단계 이미지"
-            android:elevation="4dp"/>
-
-        <!-- 설명 부분 전체를 감싸는 LinearLayout -->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/bg_gray_rounded"
-            android:elevation="4dp">
-            <LinearLayout
-                android:id="@+id/layout_description_header"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="center_vertical"
-                android:background="@drawable/bg_cardview_only"
-                android:padding="8dp">
-
-                <TextView
-                    android:id="@+id/tv_step_title"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="스텝 제목"
-                    android:textSize="18sp"
-                    android:textStyle="bold"
-                    android:textColor="@color/black" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/layout_description_body"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:paddingStart="16dp"
-                android:paddingEnd="16dp"
-                android:paddingTop="12dp"
-                android:paddingBottom="16dp">
-
-                <TextView
-                    android:id="@+id/tv_step_description"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:minHeight="80dp"
-                    android:textSize="15sp"
-                    android:textColor="#424242"
-                    tools:text="DB내용 표시\n설명\n설명\n설명" />
-            </LinearLayout>
-        </LinearLayout>
+        <!-- 타이머는 하단에 고정 -->
         <com.example.recipe_pocket.CircularTimerView
             android:id="@+id/circular_timer_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
             android:layout_marginTop="16dp"
             android:visibility="gone"
             tools:visibility="visible"/>
-    </LinearLayout>
+
+        <ScrollView
+            android:id="@+id/content_scroll_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentTop="true"
+            android:layout_above="@id/circular_timer_view"
+            android:fillViewport="true">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/iv_step_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="250dp"
+                    android:layout_marginBottom="10dp"
+                    android:background="@drawable/bg_gray_rounded"
+                    android:clipToOutline="true"
+                    android:contentDescription="레시피 단계 이미지"
+                    android:elevation="4dp"
+                    android:scaleType="centerCrop"
+                    android:visibility="gone"
+                    tools:srcCompat="@tools:sample/backgrounds/scenic"
+                    tools:visibility="visible" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/bg_gray_rounded"
+                    android:elevation="4dp"
+                    android:orientation="vertical">
+
+                    <LinearLayout
+                        android:id="@+id/layout_description_header"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/bg_cardview_only"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal"
+                        android:padding="8dp">
+                        <TextView
+                            android:id="@+id/tv_step_title"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="스텝 제목"
+                            android:textColor="@color/black"
+                            android:textSize="18sp"
+                            android:textStyle="bold" />
+                    </LinearLayout>
+                    <LinearLayout
+                        android:id="@+id/layout_description_body"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:paddingLeft="16dp"
+                        android:paddingTop="12dp"
+                        android:paddingRight="16dp"
+                        android:paddingBottom="16dp">
+                        <TextView
+                            android:id="@+id/tv_step_description"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textColor="#424242"
+                            android:textSize="15sp"
+                            tools:text="..."/>
+                    </LinearLayout>
+                </LinearLayout>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="16dp" />
+
+            </LinearLayout>
+        </ScrollView>
+    </RelativeLayout>
 </androidx.cardview.widget.CardView>
