--- a/app/src/main/res/layout/item_ingredient.xml
+++ b/app/src/main/res/layout/item_ingredient.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="50dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_gravity="center"
     android:layout_margin="5dp"
     android:background="@drawable/bg_search_bar_orange_border"
@@ -9,14 +10,15 @@
     <!-- 재료 입력칸 -->
     <LinearLayout
         android:id="@+id/frame"
-        android:layout_width="325dp"
+        android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:layout_weight="0.3"
         android:background="@drawable/bg_search_bar_orange_border"
         android:elevation="4dp"
         android:orientation="horizontal">
         <EditText
             android:id="@+id/a1"
-            android:layout_width="200dp"
+            android:layout_width="150dp"
             android:layout_height="match_parent"
             android:layout_margin="5dp"
             android:hint="재료를 입력해주세요"
@@ -32,7 +34,7 @@
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
             android:layout_marginRight="5dp"
-            android:text="0"
+            android:hint="0"
             android:inputType="number"
             android:gravity="center"
             android:textColor="@color/black"
@@ -40,25 +42,41 @@
             android:textColorHint="#CCCCCC"
             android:textSize="16dp"/>
 
-        <Spinner
-            android:id="@+id/spinner_unit"
-            android:layout_width="50dp"
-            android:layout_height="match_parent"
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/unit_text_input_layout"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_weight="2"
+            app:hintEnabled="false">
+
+        <AutoCompleteTextView
+            android:id="@+id/unit_autocomplete_textview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:background="@drawable/bg_login_rounded"
             android:gravity="center"
-            android:textAlignment="center"
-            android:textColor="@color/black"
-            android:textColorHint="#CCCCCC"
-            android:textSize="16dp" />
+            android:hint="단위"
+            android:inputType="text"
+            android:paddingTop="12dp"
+            android:paddingBottom="12dp"
+            android:textSize="16sp" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
     </LinearLayout>
 
     <ImageButton
         android:id="@+id/delete_material"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_gravity="center"
         android:src="@drawable/ic_close"
         android:background="@color/white"
-        android:layout_margin="5dp" />
+        android:layout_margin="5dp"
+        />
 </LinearLayout>
