--- a/app/src/main/res/layout/cook_write_01.xml
+++ b/app/src/main/res/layout/cook_write_01.xml
@@ -157,7 +157,9 @@
                     android:paddingHorizontal="16dp"
                     android:textColor="#333333"
                     android:textColorHint="#999999"
-                    android:textSize="14sp" />
+                    android:textSize="14sp"
+                    android:maxLines="1"
+                    android:singleLine="true"/>
 
                 <!-- 요리 소개 -->
                 <TextView
