--- a/app/src/main/res/layout/cook_write_step.xml
+++ b/app/src/main/res/layout/cook_write_step.xml
@@ -64,7 +64,9 @@
             android:paddingHorizontal="16dp"
             android:textColor="#333333"
             android:textColorHint="#999999"
-            android:textSize="14sp" />
+            android:textSize="14sp"
+            android:maxLines="1"
+            android:singleLine="true"/>
 
         <TextView
             android:layout_width="match_parent"
@@ -120,14 +122,14 @@
                     android:gravity="center_horizontal"
                     android:orientation="horizontal">
                     <ImageView
-                        android:id="@+id/hour_p"
+                        android:id="@+id/hour_m"
                         android:layout_width="24dp"
                         android:layout_height="24dp"
                         android:layout_gravity="top"
                         android:layout_marginTop="5dp"
                         android:layout_marginStart="5dp"
                         android:layout_marginEnd="5dp"
-                        android:src="@drawable/ic_add"/>
+                        android:src="@drawable/ic_remove"/>
                     <TextView
                         android:id="@+id/hour_num"
                         android:layout_width="wrap_content"
@@ -140,14 +142,14 @@
                         android:textSize="24sp"
                         android:background="@android:color/transparent"/>
                     <ImageView
-                        android:id="@+id/hour_m"
+                        android:id="@+id/hour_p"
                         android:layout_width="24dp"
                         android:layout_height="24dp"
                         android:layout_gravity="top"
                         android:layout_marginTop="5dp"
                         android:layout_marginStart="5dp"
                         android:layout_marginEnd="5dp"
-                        android:src="@drawable/ic_remove"/>
+                        android:src="@drawable/ic_add"/>
                 </LinearLayout>
             </LinearLayout>
 
@@ -172,14 +174,14 @@
                     android:gravity="center_horizontal"
                     android:orientation="horizontal">
                     <ImageView
-                        android:id="@+id/minute_p"
+                        android:id="@+id/minute_m"
                         android:layout_width="24dp"
                         android:layout_height="24dp"
                         android:layout_gravity="top"
                         android:layout_marginTop="5dp"
                         android:layout_marginStart="5dp"
                         android:layout_marginEnd="5dp"
-                        android:src="@drawable/ic_add"/>
+                        android:src="@drawable/ic_remove"/>
                     <TextView
                         android:id="@+id/minute_num"
                         android:layout_width="wrap_content"
@@ -192,14 +194,14 @@
                         android:textSize="24sp"
                         android:background="@android:color/transparent"/>
                     <ImageView
-                        android:id="@+id/minute_m"
+                        android:id="@+id/minute_p"
                         android:layout_width="24dp"
                         android:layout_height="24dp"
                         android:layout_gravity="top"
                         android:layout_marginTop="5dp"
                         android:layout_marginStart="5dp"
                         android:layout_marginEnd="5dp"
-                        android:src="@drawable/ic_remove"/>
+                        android:src="@drawable/ic_add"/>
                 </LinearLayout>
             </LinearLayout>
 
@@ -225,14 +227,14 @@
                     android:orientation="horizontal">
 
                     <ImageView
-                        android:id="@+id/second_p"
+                        android:id="@+id/second_m"
                         android:layout_width="24dp"
                         android:layout_height="24dp"
                         android:layout_gravity="top"
                         android:layout_marginTop="5dp"
                         android:layout_marginStart="5dp"
                         android:layout_marginEnd="5dp"
-                        android:src="@drawable/ic_add"/>
+                        android:src="@drawable/ic_remove"/>
                     <TextView
                         android:id="@+id/second_num"
                         android:layout_width="wrap_content"
@@ -245,14 +247,14 @@
                         android:textSize="24sp"
                         android:background="@android:color/transparent"/>
                     <ImageView
-                        android:id="@+id/second_m"
+                        android:id="@+id/second_p"
                         android:layout_width="24dp"
                         android:layout_height="24dp"
                         android:layout_gravity="top"
                         android:layout_marginTop="5dp"
                         android:layout_marginStart="5dp"
                         android:layout_marginEnd="5dp"
-                        android:src="@drawable/ic_remove"/>
+                        android:src="@drawable/ic_add"/>
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
