--- a/app/src/main/res/layout/item_ingredient.xml
+++ b/app/src/main/res/layout/item_ingredient.xml
@@ -25,7 +25,9 @@
             android:textColor="@color/black"
             android:background="@drawable/bg_main_rounded_top_white"
             android:textColorHint="#CCCCCC"
-            android:textSize="16dp"/>
+            android:textSize="16dp"
+            android:maxLines="1"
+            android:singleLine="true"/>
 
         <EditText
             android:id="@+id/a2"
@@ -47,7 +49,7 @@
             android:id="@+id/unit_text_input_layout"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
             android:layout_marginRight="5dp"
@@ -64,7 +66,7 @@
             android:inputType="text"
             android:paddingTop="12dp"
             android:paddingBottom="12dp"
-            android:textSize="16sp" />
+            android:textSize="13sp" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
