--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -4,7 +4,9 @@
         <item>g</item>
         <item>ml</item>
         <item>개</item>
-        <item>큰술</item>
-        <item>작은술</item>
+        <item>마리</item>
+        <item>술</item>
+        <item>컵</item>
+        <item>통</item>
     </string-array>
 </resources>
