--- a/app/src/main/res/layout/activity_recipe_read.xml
+++ b/app/src/main/res/layout/activity_recipe_read.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".RecipeReadActivity">
+    tools:context=".ui.recipe.read.RecipeReadActivity">
 
     <LinearLayout
         android:id="@+id/top_bars_container"
