--- a/app/src/main/res/layout/activity_userpage.xml
+++ b/app/src/main/res/layout/activity_userpage.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".UserPageActivity">
+    tools:context=".ui.user.UserPageActivity">
 
     <!-- 상단 바 (뒤로가기, 타이틀) -->
     <androidx.constraintlayout.widget.ConstraintLayout
