--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,6 +20,7 @@
     <color name="black20">#202020</color>
     <color name="black40">#404040</color>
     <color name="white20">#F5F5F5</color>
+    <color name="white_card">#F8F8F8</color>
 
     <color name="text_brown">#331C0F</color>
     <color name="text_sub">#828282</color>
