--- a/app/src/main/res/layout/weather_test.xml
+++ b/app/src/main/res/layout/weather_test.xml
@@ -4,17 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".weather.WeatherMainActivity"
-    android:background="@color/white">
+    android:orientation="vertical"
+    android:background="@color/white"
+    android:padding="16dp">
 
-    <ImageView
-        android:id="@+id/imageview"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="400dp"
-        android:src="@raw/testgif"
-        android:scaleType="fitXY">
-    </ImageView>
+        android:layout_height="100dp"/>
+
     <TextView
         android:id="@+id/locationTextView"
         android:layout_width="match_parent"
